
syntax = "proto3";

package kaonic;

//***************************************************************************//

message Empty {}

service EmptyService {}

//***************************************************************************//

message InfoResponse {}

message StatisticsResponse {}

service Device {
  rpc GetInfo(kaonic.Empty) returns(InfoResponse) {}
  rpc GetStatistics(kaonic.Empty) returns(StatisticsResponse) {}
}

//***************************************************************************//
enum RadioModule {
  MODULE_A = 0;
  MODULE_B = 1;
}

message RadioFrame {
  repeated uint32 data = 1;
  uint32 length = 2;
}

message RadioPhyConfigOFDM {
  uint32 mcs = 1;
  uint32 opt = 2;
}

message ConfigurationRequest {
  RadioModule module = 1;

  uint32 freq = 2;
  uint32 channel = 3;
  uint32 channel_spacing = 4;
  uint32 tx_power = 5;

  oneof phy_config { RadioPhyConfigOFDM ofdm = 8; }
}

message TransmitRequest {
  RadioModule module = 1;
  RadioFrame frame = 2;
}

message TransmitResponse { uint32 latency = 1; }

message ReceiveRequest {
  RadioModule module = 1;
  uint32 timeout = 2;
}

message ReceiveResponse {
  RadioModule module = 1;
  RadioFrame frame = 2;
  int32 rssi = 3;
  uint32 latency = 4;
}

service Radio {
  rpc Configure(ConfigurationRequest) returns(kaonic.Empty) {}
  rpc Transmit(TransmitRequest) returns(TransmitResponse) {}
  rpc ReceiveStream(ReceiveRequest) returns(stream ReceiveResponse) {}
}

//***************************************************************************//
